overflow trying to fix

--- a/css/footer.css
+++ b/css/footer.css
@@ -11,9 +11,9 @@
 }
 
 .copyright-text {
-    /* margin-top: 20px;
-    margin-bottom: 5px; */
-    font-size: 6vw;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-size: 4vh;
 }
 
 .bxl--github {
